--- a/somang_documents/무제.md
+++ b/somang_documents/무제.md
@@ -8,6 +8,7 @@
 - 비슷한 서비스 목록 작성
 - LLM에 DeepResearch로 보고서 작성
 - 이러이러한 서비스들과 유사한 서비스를 만들때 고려해야 하는 사항 분석
+- 소망텔레콤 기획과 LLM분석 병합
 - 소프트웨어 아키텍처
 - 개발개요
 - GitHub에 문서폴더 만들어서 정리
