--- a/somang_documents/004. 프로젝트명 & 서비스명.md
+++ b/somang_documents/004. 프로젝트명 & 서비스명.md
@@ -45,6 +45,6 @@
 ### 최종 제안 요약
 
 - **프로젝트명:** **Project T-Bridge** (내부 비전과 전문성 강조)
-- **서비스명:** **시그널 (Signal)** (현대적, 신뢰성, 핵심 가치 전달에 가장 적합)
+- **서비스명:** **T-Bridge** (현대적, 신뢰성, 핵심 가치 전달에 가장 적합)
 
 이 이름들을 바탕으로 브랜딩 전략을 수립하시면, 성공적인 서비스 출시에 큰 도움이 될 것입니다.
