20250620 설계부분 수정
데이터베이스개요
데이터베이스모델링
데이터베이스ERD
테이블명세

--- a/somang_documents/개발진행 과정.md
+++ b/somang_documents/개발진행 과정.md
@@ -288,8 +288,13 @@ DB : Supabase Database
 
 
 ## 5. 검증 및 정리
+### 1. 데이터베이스 ERD 검토
 
 ```
-OO연구를 구현하는데 
+(완성 된 문서첨부)
+
+데이터베이스 ERD가 적합한지 검토해줘.
+- ERD가 기능 명세의 기능들을 구현하는데 문제가 없는지
+- 논리적으로 모순 된 것이 없는지
 
 ```
