--- a/somang_documents/somang_documents/설계/데이터베이스개요.md
+++ b/somang_documents/somang_documents/설계/데이터베이스개요.md
@@ -1,66 +1,101 @@
-## T-Bridge 데이터베이스 개요
+# T-Bridge 데이터베이스 개요
 
 본 문서는 T-Bridge 서비스의 핵심 도메인을 구성하는 주요 데이터베이스 테이블의 구조와 역할을 정의합니다. PostgreSQL을 기준으로 데이터 타입을 예측하였으며, 이는 Supabase 백엔드 전략에 부합합니다.
 
-### 핵심 테이블 목록
+## 핵심 테이블 목록
 
 서비스의 주요 기능과 사용자 여정을 지원하기 위해 다음과 같은 핵심 테이블을 설계합니다.
 
-* **profiles**: 사용자 정보 (소비자, 사업주, 관리자)
-* **stores**: 판매점(가맹점) 정보
-* **quote_requests**: 소비자의 견적 요청서
-* **quotes**: 판매점이 제출한 표준 견적서
-* **reviews**: 거래 완료 후 소비자가 작성하는 리뷰
-* **chat_rooms**: 소비자와 판매점 간의 1:1 채팅방
-* **chat_messages**: 채팅방 내의 메시지 기록
+1. **profiles**: 사용자 정보 (소비자, 사업주, 관리자)
+2. **user_settings**: 사용자별 맞춤 설정
+3. **stores**: 판매점(가맹점) 정보
+4. **promotions**: 판매점의 프로모션 정보
+5. **quote_requests**: 소비자의 견적 요청서
+6. **quotes**: 판매점이 제출한 표준 견적서
+7. **reviews**: 거래 완료 후 소비자가 작성하는 리뷰
+8. **review_votes**: 리뷰에 대한 '좋아요/싫어요' 투표
+9. **favorites**: 사용자의 '찜하기' 정보
+10. **chat_rooms**: 소비자와 판매점 간의 1:1 채팅방
+11. **chat_messages**: 채팅방 내의 메시지 기록
+12. **notices**: 플랫폼 전체 공지사항
+13. **policies**: 버전 관리되는 서비스 약관
+14. **policy_consents**: 사용자의 약관 동의 이력
+15. **support_tickets**: 사용자 1:1 문의
+16. **ticket_replies**: 1:1 문의에 대한 답변
 
----
-
-### 1. `profiles` - 사용자 정보
+## 1. `profiles` - 사용자 정보
 
 Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 사용자 역할과 추가 정보를 관리합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type)         | 설명                                              |
-| :----------------- | :------------------------- | :---------------------------------------------- |
-| **id**             | `uuid` (PK)                | 사용자 고유 ID. `auth.users.id`를 참조하는 외래 키.          |
-| `role`             | `text`                     | 사용자의 역할 ('user', 'owner', 'admin'). RLS 정책의 기반. |
-| `name`             | `text`                     | 사용자의 이름 또는 닉네임.                                 |
-| `created_at`       | `timestamp with time zone` | 프로필 생성 시각.                                      |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 사용자 고유 ID. `auth.users.id`를 참조하는 외래 키. |
+| `role` | `text` | 사용자의 역할 ('user', 'owner', 'admin'). RLS 정책의 기반. |
+| `name` | `text` | 사용자의 이름 또는 닉네임. |
+| `created_at` | `timestamp with time zone` | 프로필 생성 시각. |
 
-### 2. `stores` - 판매점 정보
+## 2. `user_settings` - 사용자 설정
+
+사용자별 알림 등 개인화된 설정을 관리합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **user_id** | `uuid` (PK, FK) | 사용자 고유 ID. `profiles.id`를 참조. |
+| `chat_notification_enabled` | `boolean` | 채팅 메시지 수신 시 푸시 알림 활성화 여부. |
+| `promotion_notification_enabled` | `boolean` | 프로모션 정보 푸시 알림 활성화 여부. |
+| `updated_at` | `timestamp with time zone` | 설정 마지막 수정 시각. |
+
+## 3. `stores` - 판매점 정보
 
 플랫폼에 입점한 통신 판매점(가맹점)의 상세 정보를 저장합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type) | 설명 |
-| :--- | :--- | :--- |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
 | **id** | `uuid` (PK) | 판매점 고유 ID. |
 | `owner_id` | `uuid` (FK) | 판매점주의 프로필 ID. `profiles.id`를 참조. |
 | `name` | `text` | 판매점 상호명. |
 | `address` | `text` | 판매점 주소. 지도 서비스 연동에 사용. |
 | `description` | `text` | 판매점 소개글. |
-| `profile_image_url`| `text` | 판매점 대표 이미지 URL. Supabase Storage에 저장된 파일 경로. |
+| `profile_image_url` | `text` | 판매점 대표 이미지 URL. Supabase Storage에 저장된 파일 경로. |
 | `is_certified` | `boolean` | 'T-Bridge 인증 성지' 여부. `true`일 경우 특별 섹션에 노출. |
+| `response_rate` | `numeric(5, 2)` | (캐시) 견적 응답률. 성능 최적화를 위해 주기적으로 계산하여 저장. |
+| `chat_room_count` | `integer` | (캐시) 총 상담 건수. |
+| `accepted_quote_count` | `integer` | (캐시) 총 개통 건수. |
 | `created_at` | `timestamp with time zone` | 판매점 등록 시각. |
 
-### 3. `quote_requests` - 견적 요청서
+## 4. `promotions` - 프로모션 정보
+
+판매점이 등록하는 마케팅 프로모션 정보를 관리합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 프로모션 고유 ID. |
+| `store_id` | `uuid` (FK) | 프로모션을 등록한 판매점의 ID. `stores.id`를 참조. |
+| `title` | `text` | 프로모션 제목 (예: '오늘의 특가'). |
+| `description` | `text` | 프로모션 상세 내용. |
+| `start_date` | `timestamp with time zone` | 프로모션 시작 시각. |
+| `end_date` | `timestamp with time zone` | 프로모션 종료 시각. |
+| `created_at` | `timestamp with time zone` | 프로모션 생성 시각. |
+
+## 5. `quote_requests` - 견적 요청서
 
 최종 사용자가 원하는 통신 상품의 조건을 담아 제출하는 요청서 정보를 관리합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type) | 설명 |
-| :--- | :--- | :--- |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
 | **id** | `uuid` (PK) | 견적 요청 고유 ID. |
 | `user_id` | `uuid` (FK) | 요청을 생성한 사용자의 ID. `profiles.id`를 참조. |
 | `product_type` | `text` | 요청 상품 유형 ('mobile_phone', 'internet' 등). |
-| `request_details`| `jsonb` | 요청 상세 내용 (예: { "model": "iPhone 17", "carrier": "SKT" }). |
+| `request_details` | `jsonb` | 요청 상세 내용 (예: { "model": "iPhone 17", "carrier": "SKT" }). |
 | `status` | `text` | 요청 상태 ('open', 'closed', 'expired'). |
 | `created_at` | `timestamp with time zone` | 요청 생성 시각. |
 
-### 4. `quotes` - 표준 견적서
+## 6. `quotes` - 표준 견적서
 
 판매점이 사용자의 요청에 대해 제출하는 표준화된 견적서 정보를 저장합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type) | 설명 |
-| :--- | :--- | :--- |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
 | **id** | `uuid` (PK) | 견적서 고유 ID. |
 | `request_id` | `uuid` (FK) | 이 견적이 응답하는 요청의 ID. `quote_requests.id`를 참조. |
 | `store_id` | `uuid` (FK) | 견적을 제출한 판매점의 ID. `stores.id`를 참조. |
@@ -68,12 +103,12 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `status` | `text` | 견적 상태 ('sent', 'viewed', 'accepted', 'rejected'). |
 | `created_at` | `timestamp with time zone` | 견적 제출 시각. |
 
-### 5. `reviews` - 거래 후기
+## 7. `reviews` - 거래 후기
 
 실제 거래를 완료한 사용자가 판매점에 대해 작성한 후기와 별점을 관리합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type) | 설명 |
-| :--- | :--- | :--- |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
 | **id** | `uuid` (PK) | 리뷰 고유 ID. |
 | `store_id` | `uuid` (FK) | 리뷰 대상 판매점의 ID. `stores.id`를 참조. |
 | `user_id` | `uuid` (FK) | 리뷰를 작성한 사용자의 ID. `profiles.id`를 참조. |
@@ -82,26 +117,114 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `comment` | `text` | 리뷰 내용. |
 | `created_at` | `timestamp with time zone` | 리뷰 작성 시각. |
 
-### 6. `chat_rooms` - 채팅방
+## 8. `review_votes` - 리뷰 투표
+
+리뷰에 대한 사용자의 '좋아요/싫어요' 반응을 기록합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 투표 고유 ID. |
+| `review_id` | `uuid` (FK) | 투표 대상 리뷰의 ID. `reviews.id`를 참조. |
+| `user_id` | `uuid` (FK) | 투표한 사용자의 ID. `profiles.id`를 참조. |
+| `vote_type` | `text` | 투표 유형 ('like' 또는 'dislike'). |
+| `created_at` | `timestamp with time zone` | 투표 시각. |
+
+## 9. `favorites` - 찜하기
+
+사용자가 관심 있는 판매점 등 특정 항목을 저장합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 찜하기 고유 ID. |
+| `user_id` | `uuid` (FK) | 찜한 사용자의 ID. `profiles.id`를 참조. |
+| `target_id` | `uuid` | 찜한 대상의 고유 ID (예: store_id). |
+| `target_type` | `text` | 찜한 대상의 종류 ('STORE', 'PHONE_MODEL' 등). |
+| `created_at` | `timestamp with time zone` | 찜한 시각. |
+
+## 10. `chat_rooms` - 채팅방
 
 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type) | 설명 |
-| :--- | :--- | :--- |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
 | **id** | `uuid` (PK) | 채팅방 고유 ID. |
 | `user_id` | `uuid` (FK) | 참여한 소비자의 ID. `profiles.id`를 참조. |
 | `store_id` | `uuid` (FK) | 참여한 판매점의 ID. `stores.id`를 참조. |
 | `quote_id` | `uuid` (FK) | 채팅방 개설의 계기가 된 견적 ID. `quotes.id`를 참조. |
 | `created_at` | `timestamp with time zone` | 채팅방 생성 시각. |
 
-### 7. `chat_messages` - 채팅 메시지
+## 11. `chat_messages` - 채팅 메시지
 
 각 채팅방에서 오고 간 모든 메시지를 기록하여 분쟁 발생 시 증거 자료로 활용합니다.
 
-| 컬럼 명 (Column Name) | 데이터 타입 (Data Type) | 설명 |
-| :--- | :--- | :--- |
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
 | **id** | `uuid` (PK) | 메시지 고유 ID. |
 | `room_id` | `uuid` (FK) | 메시지가 속한 채팅방의 ID. `chat_rooms.id`를 참조. |
 | `sender_id` | `uuid` (FK) | 메시지를 보낸 사용자의 ID. `profiles.id`를 참조. |
 | `content` | `text` | 메시지 내용. |
+| `message_type` | `text` | 메시지 유형 ('text', 'image' 등). |
+| `attachment_url` | `text` | 파일 첨부 시 해당 파일의 URL. |
 | `created_at` | `timestamp with time zone` | 메시지 전송 시각. |
+
+## 12. `notices` - 공지사항
+
+플랫폼 운영자가 사용자에게 알리는 공지사항을 관리합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 공지사항 고유 ID. |
+| `admin_id` | `uuid` (FK) | 공지사항을 작성한 관리자의 ID. `profiles.id` 참조. |
+| `title` | `text` | 공지사항 제목. |
+| `content` | `text` | 공지사항 내용. |
+| `is_published` | `boolean` | 사용자에게 게시 여부. |
+| `created_at` | `timestamp with time zone` | 공지사항 작성 시각. |
+
+## 13. `policies` - 서비스 약관
+
+버전이 관리되는 서비스 이용약관, 개인정보처리방침 등 법적 문서를 저장합니다. (`id`는 자동 증가 `integer`로, PostgreSQL의 `serial`과 유사.)
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `integer` (PK) | 약관 고유 ID (자동 증가). |
+| `policy_type` | `text` | 약관 종류 ('terms_of_service', 'privacy_policy'). |
+| `version` | `text` | 약관 버전 (예: 'v1.1'). |
+| `content` | `text` | 약관 전체 내용. |
+| `effective_date` | `date` | 약관 효력 발생일. |
+| `created_at` | `timestamp with time zone` | 약관 생성 시각. |
+
+## 14. `policy_consents` - 약관 동의 이력
+
+사용자가 어떤 버전의 약관에 언제 동의했는지 이력을 관리합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 동의 이력 고유 ID. |
+| `user_id` | `uuid` (FK) | 동의한 사용자의 ID. `profiles.id` 참조. |
+| `policy_id` | `integer` (FK) | 동의한 약관의 ID. `policies.id` 참조. |
+| `consent_date` | `timestamp with time zone` | 동의한 시각. |
+
+## 15. `support_tickets` - 고객 지원 문의
+
+사용자의 1:1 문의를 관리합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 문의 고유 ID. |
+| `user_id` | `uuid` (FK) | 문의한 사용자의 ID. |
+| `title` | `text` | 문의 제목. |
+| `content` | `text` | 문의 내용. |
+| `status` | `text` | 문의 상태 ('open', 'in_progress', 'closed'). |
+| `created_at` | `timestamp with time zone` | 문의 생성 시각. |
+
+## 16. `ticket_replies` - 고객 지원 답변
+
+고객 지원 문의에 대한 답변을 관리합니다.
+
+| 컬럼 명 | 데이터 타입 | 설명 |
+| --- | --- | --- |
+| **id** | `uuid` (PK) | 답변 고유 ID. |
+| `ticket_id` | `uuid` (FK) | 관련 문의의 ID. `support_tickets.id`를 참조. |
+| `replier_id` | `uuid` (FK) | 답변자의 ID (관리자 또는 사용자). `profiles.id`를 참조. |
+| `content` | `text` | 답변 내용. |
+| `created_at` | `timestamp with time zone` | 답변 작성 시각. |
