--- a/somang_documents/somang_documents/설계/테이블명세.md
+++ b/somang_documents/somang_documents/설계/테이블명세.md
@@ -7,82 +7,189 @@
 ### 1. profiles
 - **테이블 설명**: 사용자의 역할 및 공통 프로필 정보를 관리합니다. Supabase의 `auth.users` 테이블과 1:1 관계를 가집니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 사용자 ID | `uuid` | PK, FK (auth.users.id) | 사용자 고유 ID. `auth.users` 테이블의 ID를 참조하며, 삭제 시 연쇄적으로 삭제(ON DELETE CASCADE)됩니다. |
-| `role` | 역할 | `text` | NOT NULL, CHECK | 사용자의 역할 ('user', 'owner', 'admin' 중 하나). |
-| `name` | 이름/닉네임 | `text` | NOT NULL | 사용자가 앱 내에서 사용할 표시 이름 또는 닉네임. |
-| `created_at` | 생성일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 프로필 레코드가 생성된 시각. |
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                     | 설명                                                                          |
+| :----------- | :----- | :------------ | :------------------------ | :-------------------------------------------------------------------------- |
+| `id`         | 사용자 ID | `uuid`        | PK, FK (auth.users.id)    | 사용자 고유 ID. `auth.users` 테이블의 ID를 참조하며, 삭제 시 연쇄적으로 삭제(ON DELETE CASCADE)됩니다. |
+| `role`       | 역할     | `text`        | NOT NULL, CHECK           | 사용자의 역할 ('user', 'owner', 'admin' 중 하나).                                    |
+| `name`       | 이름/닉네임 | `text`        | NOT NULL                  | 사용자가 앱 내에서 사용할 표시 이름 또는 닉네임.                                                |
+| `created_at` | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()` | 프로필 레코드가 생성된 시각.                                                            |
 
-### 2. stores
+### 2. user_settings
+- **테이블 설명**: 사용자별 알림 등 개인화된 설정을 관리합니다.
+
+| 컬럼 영문명                           | 컬럼 한글명   | 데이터 타입        | 제약 조건                    | 설명                                            |
+| :------------------------------- | :------- | :------------ | :----------------------- | :-------------------------------------------- |
+| `user_id`                        | 사용자 ID   | `uuid`        | PK, FK (profiles.id)     | 사용자 고유 ID. `profiles` 테이블을 참조하며, 연쇄적으로 삭제됩니다. |
+| `chat_notification_enabled`      | 채팅알림여부   | `boolean`     | NOT NULL, DEFAULT `true` | 채팅 메시지 수신 시 푸시 알림 활성화 여부입니다.                  |
+| `promotion_notification_enabled` | 프로모션알림여부 | `boolean`     | NOT NULL, DEFAULT `true` | 프로모션 정보 수신 시 푸시 알림 활성화 여부입니다.                 |
+| `updated_at`                     | 수정일시     | `timestamptz` | DEFAULT `now()`          | 설정이 마지막으로 수정된 시각입니다.                          |
+
+### 3. stores
 - **테이블 설명**: 플랫폼에 입점한 통신 판매점(가맹점)의 상세 정보를 관리합니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 판매점 ID | `uuid` | PK, DEFAULT `gen_random_uuid()` | 판매점의 고유 식별자. |
-| `owner_id` | 소유주 ID | `uuid` | NOT NULL, FK (profiles.id) | 판매점주의 프로필 ID. `profiles` 테이블을 참조하며, 소유주 프로필 삭제 시 연쇄적으로 삭제됩니다. |
-| `name` | 판매점명 | `text` | NOT NULL | 판매점의 공식 상호명. |
-| `address` | 주소 | `text` | | 판매점의 물리적 주소. 지도 서비스 연동에 사용됩니다. |
-| `description` | 소개 | `text` | | 판매점에 대한 간략한 소개글. |
-| `profile_image_url` | 프로필이미지URL | `text` | | 판매점 대표 이미지의 URL. Supabase Storage에 저장된 파일 경로. |
-| `is_certified` | 인증여부 | `boolean` | NOT NULL, DEFAULT `false` | 'T-Bridge 인증 성지' 여부를 나타내는 플래그. |
-| `created_at` | 등록일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 판매점 정보가 시스템에 등록된 시각. |
+| 컬럼 영문명                 | 컬럼 한글명    | 데이터 타입         | 제약 조건                           | 설명                                                            |
+| :--------------------- | :-------- | :------------- | :------------------------------ | :------------------------------------------------------------ |
+| `id`                   | 판매점 ID    | `uuid`         | PK, DEFAULT `gen_random_uuid()` | 판매점의 고유 식별자.                                                  |
+| `owner_id`             | 소유주 ID    | `uuid`         | NOT NULL, FK (profiles.id)      | 판매점주의 프로필 ID. `profiles` 테이블을 참조하며, 소유주 프로필 삭제 시 연쇄적으로 삭제됩니다. |
+| `name`                 | 판매점명      | `text`         | NOT NULL                        | 판매점의 공식 상호명.                                                  |
+| `address`              | 주소        | `text`         |                                 | 판매점의 물리적 주소. 지도 서비스 연동에 사용됩니다.                                |
+| `description`          | 소개        | `text`         |                                 | 판매점에 대한 간략한 소개글.                                              |
+| `profile_image_url`    | 프로필이미지URL | `text`         |                                 | 판매점 대표 이미지의 URL. Supabase Storage에 저장된 파일 경로.                 |
+| `is_certified`         | 인증여부      | `boolean`      | NOT NULL, DEFAULT `false`       | 'T-Bridge 인증 성지' 여부를 나타내는 플래그.                                |
+| `response_rate`        | 응답률       | `numeric(5,2)` | DEFAULT `0.00`                  | (캐시) 견적 응답률. 성능 최적화를 위해 주기적으로 계산하여 저장합니다.                     |
+| `chat_room_count`      | 상담건수      | `integer`      | DEFAULT `0`                     | (캐시) 총 상담 건수.                                                 |
+| `accepted_quote_count` | 개통건수      | `integer`      | DEFAULT `0`                     | (캐시) 총 개통(채택) 건수.                                             |
+| `created_at`           | 등록일시      | `timestamptz`  | NOT NULL, DEFAULT `now()`       | 판매점 정보가 시스템에 등록된 시각.                                          |
 
-### 3. quote_requests
+### 4. promotions
+- **테이블 설명**: 판매점이 등록하는 마케팅 프로모션 정보를 관리합니다.
+
+| 컬럼 영문명        | 컬럼 한글명  | 데이터 타입        | 제약 조건                           | 설명                 |
+| :------------ | :------ | :------------ | :------------------------------ | :----------------- |
+| `id`          | 프로모션 ID | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 프로모션의 고유 식별자.      |
+| `store_id`    | 판매점 ID  | `uuid`        | NOT NULL, FK (stores.id)        | 프로모션을 게시한 판매점의 ID. |
+| `title`       | 제목      | `text`        | NOT NULL                        | 프로모션의 제목.          |
+| `description` | 상세내용    | `text`        |                                 | 프로모션의 상세 설명.       |
+| `start_date`  | 시작일시    | `timestamptz` | NOT NULL                        | 프로모션 시작 시각.        |
+| `end_date`    | 종료일시    | `timestamptz` | NOT NULL                        | 프로모션 종료 시각.        |
+| `created_at`  | 생성일시    | `timestamptz` | NOT NULL, DEFAULT `now()`       | 프로모션이 생성된 시각.      |
+
+### 5. quote_requests
 - **테이블 설명**: 소비자가 원하는 통신 상품의 조건을 담아 제출하는 견적 요청서 정보를 관리합니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 요청 ID | `uuid` | PK, DEFAULT `gen_random_uuid()` | 견적 요청의 고유 식별자. |
-| `user_id` | 사용자 ID | `uuid` | NOT NULL, FK (profiles.id) | 견적을 요청한 사용자의 ID. |
-| `product_type` | 상품유형 | `text` | NOT NULL, CHECK | 요청 상품의 유형 ('mobile_phone' 또는 'internet'). |
-| `request_details` | 요청상세 | `jsonb` | NOT NULL | 요청에 대한 상세 내용을 담는 JSON 객체 (예: 원하는 단말기 모델, 요금제 등). |
-| `status` | 상태 | `text` | NOT NULL, DEFAULT `'open'`, CHECK | 요청의 현재 상태 ('open', 'closed', 'expired' 중 하나). |
-| `created_at` | 요청일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 견적 요청이 생성된 시각. |
+| 컬럼 영문명            | 컬럼 한글명 | 데이터 타입        | 제약 조건                             | 설명                                               |
+| :---------------- | :----- | :------------ | :-------------------------------- | :----------------------------------------------- |
+| `id`              | 요청 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`   | 견적 요청의 고유 식별자.                                   |
+| `user_id`         | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)        | 견적을 요청한 사용자의 ID.                                 |
+| `product_type`    | 상품유형   | `text`        | NOT NULL, CHECK                   | 요청 상품의 유형 ('mobile_phone' 또는 'internet').        |
+| `request_details` | 요청상세   | `jsonb`       | NOT NULL                          | 요청에 대한 상세 내용을 담는 JSON 객체 (예: 원하는 단말기 모델, 요금제 등). |
+| `status`          | 상태     | `text`        | NOT NULL, DEFAULT `'open'`, CHECK | 요청의 현재 상태 ('open', 'closed', 'expired' 중 하나).    |
+| `created_at`      | 요청일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 견적 요청이 생성된 시각.                                   |
 
-### 4. quotes
+### 6. quotes
 - **테이블 설명**: 판매점이 소비자의 요청에 대해 제출하는 표준화된 견적서 정보를 관리합니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 견적 ID | `uuid` | PK, DEFAULT `gen_random_uuid()` | 견적서의 고유 식별자. |
-| `request_id` | 요청 ID | `uuid` | NOT NULL, FK (quote_requests.id) | 이 견적서가 응답하는 대상 견적 요청의 ID. |
-| `store_id` | 판매점 ID | `uuid` | NOT NULL, FK (stores.id) | 견적서를 제출한 판매점의 ID. |
-| `quote_details` | 견적상세 | `jsonb` | NOT NULL | 표준화된 견적 상세 정보를 담는 JSON 객체 (예: 출고가, 지원금, 월요금, TCO 등). |
-| `status` | 상태 | `text` | NOT NULL, DEFAULT `'sent'`, CHECK | 견적서의 현재 상태 ('sent', 'viewed', 'accepted', 'rejected' 중 하나). |
-| `created_at` | 제출일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 견적서가 제출된 시각. |
+| 컬럼 영문명          | 컬럼 한글명 | 데이터 타입        | 제약 조건                             | 설명                                                          |
+| :-------------- | :----- | :------------ | :-------------------------------- | :---------------------------------------------------------- |
+| `id`            | 견적 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`   | 견적서의 고유 식별자.                                                |
+| `request_id`    | 요청 ID  | `uuid`        | NOT NULL, FK (quote_requests.id)  | 이 견적서가 응답하는 대상 견적 요청의 ID.                                   |
+| `store_id`      | 판매점 ID | `uuid`        | NOT NULL, FK (stores.id)          | 견적서를 제출한 판매점의 ID.                                           |
+| `quote_details` | 견적상세   | `jsonb`       | NOT NULL                          | 표준화된 견적 상세 정보를 담는 JSON 객체 (예: 출고가, 지원금, 월요금, TCO 등).        |
+| `status`        | 상태     | `text`        | NOT NULL, DEFAULT `'sent'`, CHECK | 견적서의 현재 상태 ('sent', 'viewed', 'accepted', 'rejected' 중 하나). |
+| `created_at`    | 제출일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 견적서가 제출된 시각.                                                |
 
-### 5. reviews
+### 7. reviews
 - **테이블 설명**: 실제 거래를 완료한 소비자가 판매점에 대해 작성한 후기와 별점을 관리합니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 리뷰 ID | `uuid` | PK, DEFAULT `gen_random_uuid()` | 리뷰의 고유 식별자. |
-| `store_id` | 판매점 ID | `uuid` | NOT NULL, FK (stores.id) | 리뷰의 대상이 되는 판매점의 ID. |
-| `user_id` | 사용자 ID | `uuid` | NOT NULL, FK (profiles.id) | 리뷰를 작성한 사용자의 ID. |
-| `quote_id` | 견적 ID | `uuid` | NOT NULL, UNIQUE, FK (quotes.id) | 리뷰의 근거가 된 거래(견적) ID. 거래 건당 하나의 리뷰만 허용하기 위해 UNIQUE 제약. |
-| `rating` | 별점 | `smallint`| NOT NULL, CHECK | 1부터 5까지의 정수형 별점. |
-| `comment` | 리뷰내용 | `text` | | 소비자가 작성한 텍스트 형식의 리뷰. |
-| `created_at`| 작성일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 리뷰가 작성된 시각. |
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                            | 설명                                                    |
+| :----------- | :----- | :------------ | :------------------------------- | :---------------------------------------------------- |
+| `id`         | 리뷰 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`  | 리뷰의 고유 식별자.                                           |
+| `store_id`   | 판매점 ID | `uuid`        | NOT NULL, FK (stores.id)         | 리뷰의 대상이 되는 판매점의 ID.                                   |
+| `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)       | 리뷰를 작성한 사용자의 ID.                                      |
+| `quote_id`   | 견적 ID  | `uuid`        | NOT NULL, UNIQUE, FK (quotes.id) | 리뷰의 근거가 된 거래(견적) ID. 거래 건당 하나의 리뷰만 허용하기 위해 UNIQUE 제약. |
+| `rating`     | 별점     | `smallint`    | NOT NULL, CHECK                  | 1부터 5까지의 정수형 별점.                                      |
+| `comment`    | 리뷰내용   | `text`        |                                  | 소비자가 작성한 텍스트 형식의 리뷰.                                  |
+| `created_at` | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`        | 리뷰가 작성된 시각.                                           |
 
-### 6. chat_rooms
-- **테이블 설명**: 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다. 동일한 `(user_id, store_id, quote_id)` 조합의 중복 생성을 방지하는 제약조건을 가집니다.
+### 8. review_votes
+- **테이블 설명**: 리뷰에 대한 사용자의 '좋아요/싫어요' 반응을 기록합니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 채팅방 ID | `uuid` | PK, DEFAULT `gen_random_uuid()` | 채팅방의 고유 식별자. |
-| `user_id` | 사용자 ID | `uuid` | NOT NULL, FK (profiles.id) | 채팅에 참여하는 소비자의 ID. |
-| `store_id` | 판매점 ID | `uuid` | NOT NULL, FK (stores.id) | 채팅에 참여하는 판매점의 ID. |
-| `quote_id` | 견적 ID | `uuid` | FK (quotes.id) | 채팅방 개설의 계기가 된 견적의 ID (선택 사항). |
-| `created_at` | 생성일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 채팅방이 생성된 시각. |
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                           |
+| :----------- | :----- | :------------ | :------------------------------ | :--------------------------- |
+| `id`         | 투표 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 투표의 고유 식별자.                  |
+| `review_id`  | 리뷰 ID  | `uuid`        | NOT NULL, FK (reviews.id)       | 투표의 대상이 되는 리뷰의 ID.           |
+| `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 투표한 사용자의 ID.                 |
+| `vote_type`  | 투표 유형  | `text`        | NOT NULL, CHECK                 | 투표 유형 ('like' 또는 'dislike'). |
+| `created_at` | 투표일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 투표가 이루어진 시각.                 |
 
-### 7. chat_messages
-- **테이블 설명**: 각 채팅방에서 전송된 모든 메시지를 시간 순서대로 기록합니다. 분쟁 발생 시 증거 자료로 활용될 수 있습니다.
+### 9. favorites
+- **테이블 설명**: 사용자가 관심있어 하는 판매점 등 특정 항목을 저장합니다.
 
-| 컬럼 영문명 | 컬럼 한글명 | 데이터 타입 | 제약 조건 | 설명 |
-| :--- | :--- | :--- | :--- | :--- |
-| `id` | 메시지 ID | `uuid` | PK, DEFAULT `gen_random_uuid()` | 메시지의 고유 식별자. |
-| `room_id` | 채팅방 ID | `uuid` | NOT NULL, FK (chat_rooms.id) | 메시지가 속한 채팅방의 ID. |
-| `sender_id` | 발신자 ID | `uuid` | NOT NULL, FK (profiles.id) | 메시지를 보낸 사용자의 ID. |
-| `content` | 내용 | `text` | NOT NULL | 메시지의 텍스트 내용. |
-| `created_at` | 전송일시 | `timestamptz` | NOT NULL, DEFAULT `now()` | 메시지가 전송된 시각. |
+| 컬럼 영문명        | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                                    |
+| :------------ | :----- | :------------ | :------------------------------ | :------------------------------------ |
+| `id`          | 찜 ID   | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 찜하기 항목의 고유 식별자.                       |
+| `user_id`     | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 찜한 사용자의 ID.                           |
+| `target_id`   | 대상 ID  | `uuid`        | NOT NULL                        | 찜한 대상의 ID (예: store_id).              |
+| `target_type` | 대상 유형  | `text`        | NOT NULL, CHECK                 | 찜한 대상의 종류 ('STORE', 'PHONE_MODEL' 등). |
+| `created_at`  | 찜한일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 찜한 시각.                                |
+
+### 10. chat_rooms
+- **테이블 설명**: 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다.
+
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                            |
+| :----------- | :----- | :------------ | :------------------------------ | :---------------------------- |
+| `id`         | 채팅방 ID | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 채팅방의 고유 식별자.                  |
+| `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 채팅에 참여하는 소비자의 ID.             |
+| `store_id`   | 판매점 ID | `uuid`        | NOT NULL, FK (stores.id)        | 채팅에 참여하는 판매점의 ID.             |
+| `quote_id`   | 견적 ID  | `uuid`        | FK (quotes.id)                  | 채팅방 개설의 계기가 된 견적의 ID (선택 사항). |
+| `created_at` | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 채팅방이 생성된 시각.                  |
+
+### 11. chat_messages
+- **테이블 설명**: 각 채팅방에서 전송된 모든 메시지를 시간 순서대로 기록합니다.
+
+| 컬럼 영문명           | 컬럼 한글명  | 데이터 타입        | 제약 조건                             | 설명                        |
+| :--------------- | :------ | :------------ | :-------------------------------- | :------------------------ |
+| `id`             | 메시지 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`   | 메시지의 고유 식별자.              |
+| `room_id`        | 채팅방 ID  | `uuid`        | NOT NULL, FK (chat_rooms.id)      | 메시지가 속한 채팅방의 ID.          |
+| `sender_id`      | 발신자 ID  | `uuid`        | NOT NULL, FK (profiles.id)        | 메시지를 보낸 사용자의 ID.          |
+| `content`        | 내용      | `text`        | NOT NULL                          | 메시지의 텍스트 내용.              |
+| `message_type`   | 메시지유형   | `text`        | NOT NULL, DEFAULT `'text'`, CHECK | 메시지 유형 ('text', 'image'). |
+| `attachment_url` | 첨부파일URL | `text`        |                                   | 이미지 등 첨부 파일의 URL.         |
+| `created_at`     | 전송일시    | `timestamptz` | NOT NULL, DEFAULT `now()`         | 메시지가 전송된 시각.              |
+
+### 12. notices
+- **테이블 설명**: 플랫폼 운영자가 게시하는 공지사항을 관리합니다.
+
+| 컬럼 영문명         | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                 |
+| :------------- | :----- | :------------ | :------------------------------ | :----------------- |
+| `id`           | 공지 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 공지사항의 고유 식별자.      |
+| `admin_id`     | 작성자 ID | `uuid`        | FK (profiles.id)                | 공지사항을 작성한 관리자의 ID. |
+| `title`        | 제목     | `text`        | NOT NULL                        | 공지사항의 제목.          |
+| `content`      | 내용     | `text`        | NOT NULL                        | 공지사항의 상세 내용.       |
+| `is_published` | 게시여부   | `boolean`     | NOT NULL, DEFAULT `false`       | 사용자에게 게시되었는지 여부.   |
+| `created_at`   | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 공지사항이 작성된 시각.      |
+
+### 13. policies
+- **테이블 설명**: 버전이 관리되는 서비스 이용약관, 개인정보처리방침 등 법적 문서를 저장합니다.
+
+| 컬럼 영문명        | 컬럼 한글명   | 데이터 타입        | 제약 조건                           | 설명                                                          |
+| :------------- | :------- | :------------ | :------------------------------ | :------------------------------------------------------------ |
+| `id`           | 약관 ID     | `serial`      | PK                              | 약관의 고유 식별자 (자동 증가).                                       |
+| `policy_type`  | 약관 종류   | `text`        | NOT NULL, UNIQUE (with version) | 약관의 종류 ('terms_of_service', 'privacy_policy'). `version`과 함께 고유합니다. |
+| `version`      | 버전        | `text`        | NOT NULL                        | 약관의 버전 (예: 'v1.1').                                         |
+| `content`      | 내용        | `text`        | NOT NULL                        | 약관의 전체 내용.                                                  |
+| `effective_date`| 효력 발생일 | `date`        | NOT NULL                        | 약관의 효력이 시작되는 날짜.                                            |
+| `created_at`   | 생성일시    | `timestamptz` | DEFAULT `now()`                 | 약관이 시스템에 등록된 시각.                                           |
+
+### 14. policy_consents
+- **테이블 설명**: 사용자가 어떤 버전의 약관에 언제 동의했는지 이력을 관리합니다.
+
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                      |
+| :----------- | :----- | :------------ | :------------------------------ | :---------------------- |
+| `id`         | 동의 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 동의 이력의 고유 식별자.         |
+| `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 약관에 동의한 사용자의 ID.       |
+| `policy_id`  | 약관 ID  | `integer`     | NOT NULL, FK (policies.id)      | 동의한 약관의 ID.              |
+| `consent_date`| 동의일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 사용자가 약관에 동의한 시각.       |
+
+### 15. support_tickets
+- **테이블 설명**: 사용자의 1:1 고객 지원 문의를 관리합니다.
+
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                             | 설명                                          |
+| :----------- | :----- | :------------ | :-------------------------------- | :------------------------------------------ |
+| `id`         | 문의 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`   | 문의의 고유 식별자.                                 |
+| `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)        | 문의를 등록한 사용자의 ID.                            |
+| `title`      | 제목     | `text`        | NOT NULL                          | 문의의 제목.                                     |
+| `content`    | 내용     | `text`        | NOT NULL                          | 문의의 상세 내용.                                  |
+| `status`     | 상태     | `text`        | NOT NULL, DEFAULT `'open'`, CHECK | 문의 처리 상태 ('open', 'in_progress', 'closed'). |
+| `created_at` | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 문의가 생성된 시각.                                 |
+
+### 16. ticket_replies
+- **테이블 설명**: 고객 지원 문의에 대한 답변을 관리합니다.
+
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                                 |
+| :----------- | :----- | :------------ | :------------------------------ | :--------------------------------- |
+| `id`         | 답변 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 답변의 고유 식별자.                      |
+| `ticket_id`  | 문의 ID  | `uuid`        | NOT NULL, FK (support_tickets.id) | 관련 문의의 ID.                          |
+| `replier_id` | 답변자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 답변을 작성한 사용자(또는 관리자)의 ID.        |
+| `content`    | 답변내용   | `text`        | NOT NULL                        | 답변의 상세 내용.                        |
+| `created_at` | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 답변이 작성된 시각.                      |
