--- a/somang_documents/무제.md
+++ b/somang_documents/무제.md
@@ -15,6 +15,8 @@
 
 애플리케이션 사용자의 역할 및 기본 정보를 관리합니다. Supabase의 `auth.users` 테이블과 연동됩니다.
 
+SQL
+
 ```SQL
 -- Table: profiles
 CREATE TABLE public.profiles (
@@ -39,7 +41,9 @@ ALTER TABLE public.profiles ENABLE ROW LEVEL SECURITY;
 
 플랫폼에 입점한 통신 판매점 정보를 관리합니다.
 
-```SQL
+SQL
+
+```
 -- Table: stores
 CREATE TABLE public.stores (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -77,7 +81,9 @@ ALTER TABLE public.stores ENABLE ROW LEVEL SECURITY;
 
 사용자가 제출한 견적 요청서를 관리합니다.
 
-```SQL
+SQL
+
+```
 -- Table: quote_requests
 CREATE TABLE public.quote_requests (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -105,7 +111,9 @@ ALTER TABLE public.quote_requests ENABLE ROW LEVEL SECURITY;
 
 판매점이 사용자의 요청에 대해 제출한 표준 견적서 정보를 저장합니다.
 
-```SQL
+SQL
+
+```
 -- Table: quotes
 CREATE TABLE public.quotes (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -133,7 +141,9 @@ ALTER TABLE public.quotes ENABLE ROW LEVEL SECURITY;
 
 실거래 완료 후 사용자가 작성하는 리뷰와 별점을 관리합니다.
 
-```SQL
+SQL
+
+```
 -- Table: reviews
 CREATE TABLE public.reviews (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -163,7 +173,9 @@ ALTER TABLE public.reviews ENABLE ROW LEVEL SECURITY;
 
 소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
 
-```SQL
+SQL
+
+```
 -- Table: chat_rooms
 CREATE TABLE public.chat_rooms (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -214,7 +226,9 @@ ALTER TABLE public.chat_messages ENABLE ROW LEVEL SECURITY;
 
 판매점이 등록하는 마케팅 프로모션을 관리합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.promotions (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE CASCADE,
@@ -233,7 +247,9 @@ ALTER TABLE public.promotions ENABLE ROW LEVEL SECURITY;
 
 플랫폼 전체 공지사항을 관리합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.notices (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     admin_id uuid REFERENCES public.profiles(id) ON DELETE SET NULL,
@@ -251,7 +267,9 @@ ALTER TABLE public.notices ENABLE ROW LEVEL SECURITY;
 
 버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.policies (
     id serial PRIMARY KEY,
     policy_type text NOT NULL, -- e.g., 'terms_of_service', 'privacy_policy'
@@ -281,7 +299,9 @@ ALTER TABLE public.policy_consents ENABLE ROW LEVEL SECURITY;
 
 사용자가 찜한 판매점 정보를 관리합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.favorites (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
@@ -299,7 +319,9 @@ ALTER TABLE public.favorites ENABLE ROW LEVEL SECURITY;
 
 사용자별 알림 설정을 관리합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.user_settings (
     user_id uuid NOT NULL PRIMARY KEY REFERENCES public.profiles(id) ON DELETE CASCADE,
     chat_notification_enabled boolean NOT NULL DEFAULT true,
@@ -315,7 +337,9 @@ ALTER TABLE public.user_settings ENABLE ROW LEVEL SECURITY;
 
 고객 지원 문의 및 답변을 관리합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.support_tickets (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
@@ -344,7 +368,9 @@ ALTER TABLE public.ticket_replies ENABLE ROW LEVEL SECURITY;
 
 리뷰에 대한 '좋아요/싫어요' 반응을 기록합니다.
 
-```SQL
+SQL
+
+```
 CREATE TABLE public.review_votes (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     review_id uuid NOT NULL REFERENCES public.reviews(id) ON DELETE CASCADE,
