데이터베이스 개요, 데이터베이스 모델링, 데이터베이스ERD, 테이블명세 수정 - 20250620

--- a/somang_documents/somang_documents/설계/데이터베이스모델링.md
+++ b/somang_documents/somang_documents/설계/데이터베이스모델링.md
@@ -35,7 +35,24 @@ COMMENT ON COLUMN public.profiles.created_at IS 'Timestamp of when the profile w
 ALTER TABLE public.profiles ENABLE ROW LEVEL SECURITY;
 ```
 
-### 2. `stores` Table
+### 2. `user_settings` Table
+
+사용자별 알림 설정을 관리합니다.
+
+```SQL
+CREATE TABLE public.user_settings (
+    user_id uuid NOT NULL PRIMARY KEY REFERENCES public.profiles(id) ON DELETE CASCADE,
+    chat_notification_enabled boolean NOT NULL DEFAULT true,
+    promotion_notification_enabled boolean NOT NULL DEFAULT true,
+    updated_at timestamptz DEFAULT now()
+);
+
+COMMENT ON TABLE public.user_settings IS 'Stores user-specific notification and other settings.';
+ALTER TABLE public.user_settings ENABLE ROW LEVEL SECURITY;
+```
+
+
+### 3. `stores` Table
 
 플랫폼에 입점한 통신 판매점 정보를 관리합니다.
 
@@ -73,7 +90,27 @@ COMMENT ON COLUMN public.stores.created_at IS 'Timestamp of when the store was r
 ALTER TABLE public.stores ENABLE ROW LEVEL SECURITY;
 ```
 
-### 3. `quote_requests` Table
+### 4. `promotions` Table (New)
+
+판매점이 등록하는 마케팅 프로모션을 관리합니다.
+
+```SQL
+CREATE TABLE public.promotions (
+    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
+    store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE CASCADE,
+    title text NOT NULL,
+    description text,
+    start_date timestamptz NOT NULL,
+    end_date timestamptz NOT NULL,
+    created_at timestamptz NOT NULL DEFAULT now()
+);
+
+COMMENT ON TABLE public.promotions IS 'Stores promotional events created by stores.';
+ALTER TABLE public.promotions ENABLE ROW LEVEL SECURITY;
+```
+
+
+### 5. `quote_requests` Table
 
 사용자가 제출한 견적 요청서를 관리합니다.
 
@@ -101,7 +138,7 @@ COMMENT ON COLUMN public.quote_requests.created_at IS 'Timestamp of when the req
 ALTER TABLE public.quote_requests ENABLE ROW LEVEL SECURITY;
 ```
 
-### 4. `quotes` Table
+### 6. `quotes` Table
 
 판매점이 사용자의 요청에 대해 제출한 표준 견적서 정보를 저장합니다.
 
@@ -129,7 +166,7 @@ COMMENT ON COLUMN public.quotes.created_at IS 'Timestamp of when the quote was s
 ALTER TABLE public.quotes ENABLE ROW LEVEL SECURITY;
 ```
 
-### 5. `reviews` Table
+### 7. `reviews` Table
 
 실거래 완료 후 사용자가 작성하는 리뷰와 별점을 관리합니다.
 
@@ -159,7 +196,43 @@ COMMENT ON COLUMN public.reviews.created_at IS 'Timestamp of when the review was
 ALTER TABLE public.reviews ENABLE ROW LEVEL SECURITY;
 ```
 
-### 6. `chat_rooms` and `chat_messages` Tables
+### 8. `review_votes` Table
+
+리뷰에 대한 '좋아요/싫어요' 반응을 기록합니다.
+
+```SQL
+CREATE TABLE public.review_votes (
+    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
+    review_id uuid NOT NULL REFERENCES public.reviews(id) ON DELETE CASCADE,
+    user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
+    vote_type text NOT NULL CHECK (vote_type IN ('like', 'dislike')),
+    created_at timestamptz NOT NULL DEFAULT now(),
+    UNIQUE (review_id, user_id)
+);
+
+COMMENT ON TABLE public.review_votes IS 'Stores likes and dislikes for reviews.';
+ALTER TABLE public.review_votes ENABLE ROW LEVEL SECURITY;
+```
+
+### 9. `favorites` Table
+
+사용자가 찜한 판매점 정보를 관리합니다.
+
+```SQL
+CREATE TABLE public.favorites (
+    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
+    user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
+    target_id uuid NOT NULL, -- The ID of the item being favorited, e.g., a store's ID
+    target_type text NOT NULL CHECK (target_type IN ('STORE')), -- Can be extended to 'PHONE_MODEL' etc.
+    created_at timestamptz NOT NULL DEFAULT now(),
+    UNIQUE(user_id, target_id, target_type)
+);
+
+COMMENT ON TABLE public.favorites IS 'Stores user''s bookmarked items like stores.';
+ALTER TABLE public.favorites ENABLE ROW LEVEL SECURITY;
+```
+
+### 10. `chat_rooms`  Tables
 
 소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
 
@@ -184,7 +257,13 @@ COMMENT ON COLUMN public.chat_rooms.created_at IS 'Timestamp of when the chat ro
 
 -- Enable Row Level Security
 ALTER TABLE public.chat_rooms ENABLE ROW LEVEL SECURITY;
+```
 
+### 11. `chat_messages` Tables
+
+소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
+
+```SQL
 -- Table: chat_messages
 CREATE TABLE public.chat_messages (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -210,26 +289,7 @@ COMMENT ON COLUMN public.chat_messages.created_at IS 'Timestamp of when the mess
 ALTER TABLE public.chat_messages ENABLE ROW LEVEL SECURITY;
 ```
 
-### 7. `promotions` Table (New)
-
-판매점이 등록하는 마케팅 프로모션을 관리합니다.
-
-```SQL
-CREATE TABLE public.promotions (
-    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
-    store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE CASCADE,
-    title text NOT NULL,
-    description text,
-    start_date timestamptz NOT NULL,
-    end_date timestamptz NOT NULL,
-    created_at timestamptz NOT NULL DEFAULT now()
-);
-
-COMMENT ON TABLE public.promotions IS 'Stores promotional events created by stores.';
-ALTER TABLE public.promotions ENABLE ROW LEVEL SECURITY;
-```
-
-### 8. `notices` Table (New)
+### 12. `notices` Table
 
 플랫폼 전체 공지사항을 관리합니다.
 
@@ -247,7 +307,7 @@ COMMENT ON TABLE public.notices IS 'Stores platform-wide announcements for users
 ALTER TABLE public.notices ENABLE ROW LEVEL SECURITY;
 ```
 
-### 9. `policies` & `policy_consents` Tables (New)
+### 13. `policies`  Tables
 
 버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
 
@@ -264,7 +324,13 @@ CREATE TABLE public.policies (
 
 COMMENT ON TABLE public.policies IS 'Stores versioned legal documents like ToS and Privacy Policy.';
 ALTER TABLE public.policies ENABLE ROW LEVEL SECURITY;
+```
 
+### 14. `policy_consents` Tables
+
+버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
+
+```SQL
 CREATE TABLE public.policy_consents (
     id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
     user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
@@ -277,41 +343,7 @@ COMMENT ON TABLE public.policy_consents IS 'Tracks user consent to specific poli
 ALTER TABLE public.policy_consents ENABLE ROW LEVEL SECURITY;
 ```
 
-### 10. `favorites` Table (New)
-
-사용자가 찜한 판매점 정보를 관리합니다.
-
-```SQL
-CREATE TABLE public.favorites (
-    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
-    user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
-    target_id uuid NOT NULL, -- The ID of the item being favorited, e.g., a store's ID
-    target_type text NOT NULL CHECK (target_type IN ('STORE')), -- Can be extended to 'PHONE_MODEL' etc.
-    created_at timestamptz NOT NULL DEFAULT now(),
-    UNIQUE(user_id, target_id, target_type)
-);
-
-COMMENT ON TABLE public.favorites IS 'Stores user''s bookmarked items like stores.';
-ALTER TABLE public.favorites ENABLE ROW LEVEL SECURITY;
-```
-
-### 11. `user_settings` Table (New)
-
-사용자별 알림 설정을 관리합니다.
-
-```SQL
-CREATE TABLE public.user_settings (
-    user_id uuid NOT NULL PRIMARY KEY REFERENCES public.profiles(id) ON DELETE CASCADE,
-    chat_notification_enabled boolean NOT NULL DEFAULT true,
-    promotion_notification_enabled boolean NOT NULL DEFAULT true,
-    updated_at timestamptz DEFAULT now()
-);
-
-COMMENT ON TABLE public.user_settings IS 'Stores user-specific notification and other settings.';
-ALTER TABLE public.user_settings ENABLE ROW LEVEL SECURITY;
-```
-
-### 12. `support_tickets` & `ticket_replies` Tables (New)
+### 15. `support_tickets`  Tables
 
 고객 지원 문의 및 답변을 관리합니다.
 
@@ -327,7 +359,13 @@ CREATE TABLE public.support_tickets (
 
 COMMENT ON TABLE public.support_tickets IS 'Stores customer support inquiries.';
 ALTER TABLE public.support_tickets ENABLE ROW LEVEL SECURITY;
+```
 
+### 16. `ticket_replies` Tables
+
+고객 지원 문의 및 답변을 관리합니다.
+
+```SQL
 CREATE TABLE public.ticket_replies (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     ticket_id uuid NOT NULL REFERENCES public.support_tickets(id) ON DELETE CASCADE,
@@ -340,20 +378,3 @@ COMMENT ON TABLE public.ticket_replies IS 'Stores replies for support tickets.';
 ALTER TABLE public.ticket_replies ENABLE ROW LEVEL SECURITY;
 ```
 
-### 13. `review_votes` Table (New)
-
-리뷰에 대한 '좋아요/싫어요' 반응을 기록합니다.
-
-```SQL
-CREATE TABLE public.review_votes (
-    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
-    review_id uuid NOT NULL REFERENCES public.reviews(id) ON DELETE CASCADE,
-    user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
-    vote_type text NOT NULL CHECK (vote_type IN ('like', 'dislike')),
-    created_at timestamptz NOT NULL DEFAULT now(),
-    UNIQUE (review_id, user_id)
-);
-
-COMMENT ON TABLE public.review_votes IS 'Stores likes and dislikes for reviews.';
-ALTER TABLE public.review_votes ENABLE ROW LEVEL SECURITY;
-```
