--- a/somang_documents/somang_documents/설계/테이블명세.md
+++ b/somang_documents/somang_documents/설계/테이블명세.md
@@ -80,6 +80,7 @@
 
 ### 7. reviews
 - **테이블 설명**: 실제 거래를 완료한 소비자가 판매점에 대해 작성한 후기와 별점을 관리합니다.
+- 기타 설명: 하나의 거래(견적)에 대해 오직 하나의 리뷰만 작성 가능
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                            | 설명                                                    |
 | :----------- | :----- | :------------ | :------------------------------- | :---------------------------------------------------- |
@@ -93,6 +94,7 @@
 
 ### 8. review_votes
 - **테이블 설명**: 리뷰에 대한 사용자의 '좋아요/싫어요' 반응을 기록합니다.
+- 기타 설명: 한 사용자는 하나의 리뷰에 대해 한 번만 투표할 수 있음
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                           |
 | :----------- | :----- | :------------ | :------------------------------ | :--------------------------- |
@@ -115,6 +117,7 @@
 
 ### 10. chat_rooms
 - **테이블 설명**: 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다.
+- 기타 설명: 동일한 사용자, 판매점, 견적 조합으로 중복된 채팅방이 생성되지 않음.
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                            |
 | :----------- | :----- | :------------ | :------------------------------ | :---------------------------- |
@@ -163,13 +166,14 @@
 
 ### 14. policy_consents
 - **테이블 설명**: 사용자가 어떤 버전의 약관에 언제 동의했는지 이력을 관리합니다.
+- 기타 설명: 한 사용자가 특정 버전의 약관에 대해 중복으로 동의하는 것을 방지.
 
-| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                      |
-| :----------- | :----- | :------------ | :------------------------------ | :---------------------- |
-| `id`         | 동의 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 동의 이력의 고유 식별자.         |
-| `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 약관에 동의한 사용자의 ID.       |
-| `policy_id`  | 약관 ID  | `integer`     | NOT NULL, FK (policies.id)      | 동의한 약관의 ID.              |
-| `consent_date`| 동의일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 사용자가 약관에 동의한 시각.       |
+| 컬럼 영문명         | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명               |
+| :------------- | :----- | :------------ | :------------------------------ | :--------------- |
+| `id`           | 동의 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 동의 이력의 고유 식별자.   |
+| `user_id`      | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 약관에 동의한 사용자의 ID. |
+| `policy_id`    | 약관 ID  | `integer`     | NOT NULL, FK (policies.id)      | 동의한 약관의 ID.      |
+| `consent_date` | 동의일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 사용자가 약관에 동의한 시각. |
 
 ### 15. support_tickets
 - **테이블 설명**: 사용자의 1:1 고객 지원 문의를 관리합니다.
