--- a/somang_documents/개발진행 과정.md
+++ b/somang_documents/개발진행 과정.md
@@ -294,7 +294,9 @@ DB : Supabase Database
 (완성 된 문서첨부)
 
 데이터베이스 ERD가 적합한지 검토해줘.
-- ERD가 기능 명세의 기능들을 구현하는데 문제가 없는지
-- 논리적으로 모순 된 것이 없는지
+- ERD가 기능 명세의 기능들을 구현하는데 문제가 없는지 검토.
+- 논리적으로 모순 된 것이 없는지 검토.
+- 추가 되어야 할 사항이 없는지 검토.
+- 추가 되어야 할 사항이 있다면 제안.
 
 ```
