--- a/somang_documents/somang_documents/설계/데이터베이스개요.md
+++ b/somang_documents/somang_documents/설계/데이터베이스개요.md
@@ -6,22 +6,23 @@
 
 서비스의 주요 기능과 사용자 여정을 지원하기 위해 다음과 같은 핵심 테이블을 설계합니다.
 
-1. **profiles**: 사용자 정보 (소비자, 사업주, 관리자)
-2. **user_settings**: 사용자별 맞춤 설정
-3. **stores**: 판매점(가맹점) 정보
-4. **promotions**: 판매점의 프로모션 정보
-5. **quote_requests**: 소비자의 견적 요청서
-6. **quotes**: 판매점이 제출한 표준 견적서
-7. **reviews**: 거래 완료 후 소비자가 작성하는 리뷰
-8. **review_votes**: 리뷰에 대한 '좋아요/싫어요' 투표
-9. **favorites**: 사용자의 '찜하기' 정보
-10. **chat_rooms**: 소비자와 판매점 간의 1:1 채팅방
-11. **chat_messages**: 채팅방 내의 메시지 기록
-12. **notices**: 플랫폼 전체 공지사항
-13. **policies**: 버전 관리되는 서비스 약관
-14. **policy_consents**: 사용자의 약관 동의 이력
-15. **support_tickets**: 사용자 1:1 문의
-16. **ticket_replies**: 1:1 문의에 대한 답변
+1.  **profiles**: 사용자 정보 (소비자, 사업주, 관리자)
+2.  **user_settings**: 사용자별 맞춤 설정
+3.  **stores**: 판매점(가맹점) 정보
+4.  **store_verification_documents**: 판매점 인증 서류
+5.  **promotions**: 판매점의 프로모션 정보
+6.  **quote_requests**: 소비자의 견적 요청서
+7.  **quotes**: 판매점이 제출한 표준 견적서
+8.  **reviews**: 거래 완료 후 소비자가 작성하는 리뷰
+9.  **review_votes**: 리뷰에 대한 '좋아요/싫어요' 투표
+10. **favorites**: 사용자의 '찜하기' 정보
+11. **chat_rooms**: 소비자와 판매점 간의 1:1 채팅방
+12. **chat_messages**: 채팅방 내의 메시지 기록
+13. **notices**: 플랫폼 전체 공지사항
+14. **policies**: 버전 관리되는 서비스 약관
+15. **policy_consents**: 사용자의 약관 동의 이력
+16. **support_tickets**: 사용자 1:1 문의
+17. **ticket_replies**: 1:1 문의에 대한 답변
 
 ## 1. `profiles` - 사용자 정보
 
@@ -49,21 +50,43 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 
 플랫폼에 입점한 통신 판매점(가맹점)의 상세 정보를 저장합니다.
 
-| 컬럼 명 | 데이터 타입 | 설명 |
-| --- | --- | --- |
-| **id** | `uuid` (PK) | 판매점 고유 ID. |
-| `owner_id` | `uuid` (FK) | 판매점주의 프로필 ID. `profiles.id`를 참조. |
-| `name` | `text` | 판매점 상호명. |
-| `address` | `text` | 판매점 주소. 지도 서비스 연동에 사용. |
-| `description` | `text` | 판매점 소개글. |
-| `profile_image_url` | `text` | 판매점 대표 이미지 URL. Supabase Storage에 저장된 파일 경로. |
-| `is_certified` | `boolean` | 'T-Bridge 인증 성지' 여부. `true`일 경우 특별 섹션에 노출. |
-| `response_rate` | `numeric(5, 2)` | (캐시) 견적 응답률. 성능 최적화를 위해 주기적으로 계산하여 저장. |
-| `chat_room_count` | `integer` | (캐시) 총 상담 건수. |
-| `accepted_quote_count` | `integer` | (캐시) 총 개통 건수. |
-| `created_at` | `timestamp with time zone` | 판매점 등록 시각. |
+| 컬럼 명                   | 데이터 타입                     | 설명                                                       |
+| ---------------------- | -------------------------- | -------------------------------------------------------- |
+| **id**                 | `uuid` (PK)                | 판매점 고유 ID.                                               |
+| `owner_id`             | `uuid` (FK)                | 판매점주의 프로필 ID. `profiles.id`를 참조.                         |
+| `name`                 | `text`                     | 판매점 상호명.                                                 |
+| `zip_code`             | `text`                     | 우편번호.                                                    |
+| `base_address`         | `text`                     | 기본 주소.                                                   |
+| `detail_address`       | `text`                     | 상세 주소.                                                   |
+| `latitude`             | `numeric(10, 8)`           | 주소의 위도 정보. 지도 표시에 사용.                                    |
+| `longitude`            | `numeric(11, 8)`           | 주소의 경도 정보. 지도 표시에 사용.                                    |
+| `description`          | `text`                     | 판매점 소개글.                                                 |
+| `profile_image_url`    | `text`                     | 판매점 대표 이미지 URL. Supabase Storage에 저장된 파일 경로.             |
+| `status`               | `text`                     | 판매점 상태 ('pending', 'approved', 'rejected', 'suspended'). |
+| `is_certified`         | `boolean`                  | 'T-Bridge 인증 성지' 여부. `true`일 경우 특별 섹션에 노출.               |
+| `response_rate`        | `numeric(5, 2)`            | (캐시) 견적 응답률. 성능 최적화를 위해 주기적으로 계산하여 저장.                   |
+| `chat_room_count`      | `integer`                  | (캐시) 총 상담 건수.                                            |
+| `accepted_quote_count` | `integer`                  | (캐시) 총 개통 건수.                                            |
+| `created_at`           | `timestamp with time zone` | 판매점 등록 시각.                                               |
 
-## 4. `promotions` - 프로모션 정보
+## 4. `store_verification_documents` - 판매점 인증 서류
+
+판매점이 제출하는 인증 서류 정보를 관리합니다.
+
+| 컬럼 명            | 데이터 타입                     | 설명                                               |
+| --------------- | -------------------------- | ------------------------------------------------ |
+| **id**          | `uuid` (PK)                | 인증 서류 고유 ID.                                     |
+| `store_id`      | `uuid` (FK)                | 관련 판매점의 ID. `stores.id`를 참조.                     |
+| `document_type` | `text`                     | 서류 종류 ('business_license', 'telecom_license' 등). |
+| `file_url`      | `text`                     | 업로드된 서류 파일의 URL.                                 |
+| `status`        | `text`                     | 서류 심사 상태 ('submitted', 'approved', 'rejected').  |
+| `created_at`    | `timestamp with time zone` | 서류 제출 시각.                                        |
+| `reviewed_at`   | `timestamp with time zone` | 관리자가 서류를 심사한 시각.                                 |
+| `reviewer_id`   | `uuid` (FK)                | 서류를 심사한 관리자의 ID. `profiles.id`를 참조.              |
+| `reject_reason` | `text`                     | 심사 거절 시 사유.                                      |
+
+
+## 5. `promotions` - 프로모션 정보
 
 판매점이 등록하는 마케팅 프로모션 정보를 관리합니다.
 
@@ -77,7 +100,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `end_date` | `timestamp with time zone` | 프로모션 종료 시각. |
 | `created_at` | `timestamp with time zone` | 프로모션 생성 시각. |
 
-## 5. `quote_requests` - 견적 요청서
+## 6. `quote_requests` - 견적 요청서
 
 최종 사용자가 원하는 통신 상품의 조건을 담아 제출하는 요청서 정보를 관리합니다.
 
@@ -90,7 +113,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `status` | `text` | 요청 상태 ('open', 'closed', 'expired'). |
 | `created_at` | `timestamp with time zone` | 요청 생성 시각. |
 
-## 6. `quotes` - 표준 견적서
+## 7. `quotes` - 표준 견적서
 
 판매점이 사용자의 요청에 대해 제출하는 표준화된 견적서 정보를 저장합니다.
 
@@ -103,7 +126,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `status` | `text` | 견적 상태 ('sent', 'viewed', 'accepted', 'rejected'). |
 | `created_at` | `timestamp with time zone` | 견적 제출 시각. |
 
-## 7. `reviews` - 거래 후기
+## 8. `reviews` - 거래 후기
 
 실제 거래를 완료한 사용자가 판매점에 대해 작성한 후기와 별점을 관리합니다.
 
@@ -115,9 +138,10 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `quote_id` | `uuid` (FK) | 리뷰의 근거가 된 거래(견적) ID. `quotes.id`를 참조. |
 | `rating` | `smallint` | 별점 (1~5). |
 | `comment` | `text` | 리뷰 내용. |
+| `is_hidden` | `boolean` | 관리자에 의한 숨김 처리 여부. |
 | `created_at` | `timestamp with time zone` | 리뷰 작성 시각. |
 
-## 8. `review_votes` - 리뷰 투표
+## 9. `review_votes` - 리뷰 투표
 
 리뷰에 대한 사용자의 '좋아요/싫어요' 반응을 기록합니다.
 
@@ -129,7 +153,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `vote_type` | `text` | 투표 유형 ('like' 또는 'dislike'). |
 | `created_at` | `timestamp with time zone` | 투표 시각. |
 
-## 9. `favorites` - 찜하기
+## 10. `favorites` - 찜하기
 
 사용자가 관심 있는 판매점 등 특정 항목을 저장합니다.
 
@@ -141,7 +165,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `target_type` | `text` | 찜한 대상의 종류 ('STORE', 'PHONE_MODEL' 등). |
 | `created_at` | `timestamp with time zone` | 찜한 시각. |
 
-## 10. `chat_rooms` - 채팅방
+## 11. `chat_rooms` - 채팅방
 
 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다.
 
@@ -153,7 +177,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `quote_id` | `uuid` (FK) | 채팅방 개설의 계기가 된 견적 ID. `quotes.id`를 참조. |
 | `created_at` | `timestamp with time zone` | 채팅방 생성 시각. |
 
-## 11. `chat_messages` - 채팅 메시지
+## 12. `chat_messages` - 채팅 메시지
 
 각 채팅방에서 오고 간 모든 메시지를 기록하여 분쟁 발생 시 증거 자료로 활용합니다.
 
@@ -167,7 +191,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `attachment_url` | `text` | 파일 첨부 시 해당 파일의 URL. |
 | `created_at` | `timestamp with time zone` | 메시지 전송 시각. |
 
-## 12. `notices` - 공지사항
+## 13. `notices` - 공지사항
 
 플랫폼 운영자가 사용자에게 알리는 공지사항을 관리합니다.
 
@@ -180,7 +204,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `is_published` | `boolean` | 사용자에게 게시 여부. |
 | `created_at` | `timestamp with time zone` | 공지사항 작성 시각. |
 
-## 13. `policies` - 서비스 약관
+## 14. `policies` - 서비스 약관
 
 버전이 관리되는 서비스 이용약관, 개인정보처리방침 등 법적 문서를 저장합니다. (`id`는 자동 증가 `integer`로, PostgreSQL의 `serial`과 유사.)
 
@@ -193,7 +217,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `effective_date` | `date` | 약관 효력 발생일. |
 | `created_at` | `timestamp with time zone` | 약관 생성 시각. |
 
-## 14. `policy_consents` - 약관 동의 이력
+## 15. `policy_consents` - 약관 동의 이력
 
 사용자가 어떤 버전의 약관에 언제 동의했는지 이력을 관리합니다.
 
@@ -204,7 +228,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `policy_id` | `integer` (FK) | 동의한 약관의 ID. `policies.id` 참조. |
 | `consent_date` | `timestamp with time zone` | 동의한 시각. |
 
-## 15. `support_tickets` - 고객 지원 문의
+## 16. `support_tickets` - 고객 지원 문의
 
 사용자의 1:1 문의를 관리합니다.
 
@@ -217,7 +241,7 @@ Supabase의 `auth.users` 테이블과 1:1로 연결되어 애플리케이션의 
 | `status` | `text` | 문의 상태 ('open', 'in_progress', 'closed'). |
 | `created_at` | `timestamp with time zone` | 문의 생성 시각. |
 
-## 16. `ticket_replies` - 고객 지원 답변
+## 17. `ticket_replies` - 고객 지원 답변
 
 고객 지원 문의에 대한 답변을 관리합니다.
 
