--- a/somang_documents/somang_documents/설계/데이터베이스모델링.md
+++ b/somang_documents/somang_documents/설계/데이터베이스모델링.md
@@ -62,9 +62,14 @@ CREATE TABLE public.stores (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     owner_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
     name text NOT NULL,
-    address text,
     description text,
     profile_image_url text,
+    zip_code text,
+    base_address text,
+    detail_address text,
+    latitude numeric(10, 8),
+    longitude numeric(11, 8),
+    status text NOT NULL DEFAULT 'pending' CHECK (status IN ('pending', 'approved', 'rejected', 'suspended')),
     is_certified boolean NOT NULL DEFAULT false,
     response_rate numeric(5, 2) DEFAULT 0.00,
     chat_room_count integer DEFAULT 0,
@@ -77,9 +82,14 @@ COMMENT ON TABLE public.stores IS 'Represents telecom retail stores registered o
 COMMENT ON COLUMN public.stores.id IS 'Unique identifier for the store.';
 COMMENT ON COLUMN public.stores.owner_id IS 'The profile ID of the business owner.';
 COMMENT ON COLUMN public.stores.name IS 'The name of the store.';
-COMMENT ON COLUMN public.stores.address IS 'The physical address of the store.';
 COMMENT ON COLUMN public.stores.description IS 'A brief introduction to the store.';
 COMMENT ON COLUMN public.stores.profile_image_url IS 'URL for the store''s profile image.';
+COMMENT ON COLUMN public.stores.zip_code IS 'Zip code of the store address.';
+COMMENT ON COLUMN public.stores.base_address IS 'Base part of the store address.';
+COMMENT ON COLUMN public.stores.detail_address IS 'Detailed part of the store address.';
+COMMENT ON COLUMN public.stores.latitude IS 'Latitude of the store location.';
+COMMENT ON COLUMN public.stores.longitude IS 'Longitude of the store location.';
+COMMENT ON COLUMN public.stores.status IS 'The current status of the store: pending, approved, rejected, suspended.';
 COMMENT ON COLUMN public.stores.is_certified IS 'Flag for ''T-Bridge Certified Holy Land''.';
 COMMENT ON COLUMN public.stores.response_rate IS 'Cache column for the store''s quote response rate.';
 COMMENT ON COLUMN public.stores.chat_room_count IS 'Cache column for the total number of chats.';
@@ -90,7 +100,30 @@ COMMENT ON COLUMN public.stores.created_at IS 'Timestamp of when the store was r
 ALTER TABLE public.stores ENABLE ROW LEVEL SECURITY;
 ```
 
-### 4. `promotions` Table (New)
+### 4. `store_verification_documents` Table (New)
+
+판매점 인증 서류를 관리합니다.
+
+```SQL
+CREATE TABLE public.store_verification_documents (
+    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
+    store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE CASCADE,
+    document_type text NOT NULL, -- e.g., 'business_license', 'telecom_license'
+    file_url text NOT NULL,
+    status text NOT NULL DEFAULT 'submitted' CHECK (status IN ('submitted', 'approved', 'rejected')),
+    created_at timestamptz NOT NULL DEFAULT now(),
+    reviewed_at timestamptz,
+    reviewer_id uuid REFERENCES public.profiles(id) ON DELETE SET NULL,
+    reject_reason text
+);
+
+COMMENT ON TABLE public.store_verification_documents IS 'Stores documents for store verification.';
+COMMENT ON COLUMN public.store_verification_documents.status IS 'Verification status of the document.';
+COMMENT ON COLUMN public.store_verification_documents.reviewer_id IS 'The admin profile ID who reviewed the document.';
+ALTER TABLE public.store_verification_documents ENABLE ROW LEVEL SECURITY;
+```
+
+### 5. `promotions` Table
 
 판매점이 등록하는 마케팅 프로모션을 관리합니다.
 
@@ -110,7 +143,7 @@ ALTER TABLE public.promotions ENABLE ROW LEVEL SECURITY;
 ```
 
 
-### 5. `quote_requests` Table
+### 6. `quote_requests` Table
 
 사용자가 제출한 견적 요청서를 관리합니다.
 
@@ -138,7 +171,7 @@ COMMENT ON COLUMN public.quote_requests.created_at IS 'Timestamp of when the req
 ALTER TABLE public.quote_requests ENABLE ROW LEVEL SECURITY;
 ```
 
-### 6. `quotes` Table
+### 7. `quotes` Table
 
 판매점이 사용자의 요청에 대해 제출한 표준 견적서 정보를 저장합니다.
 
@@ -166,7 +199,7 @@ COMMENT ON COLUMN public.quotes.created_at IS 'Timestamp of when the quote was s
 ALTER TABLE public.quotes ENABLE ROW LEVEL SECURITY;
 ```
 
-### 7. `reviews` Table
+### 8. `reviews` Table
 
 실거래 완료 후 사용자가 작성하는 리뷰와 별점을 관리합니다.
 
@@ -179,6 +212,7 @@ CREATE TABLE public.reviews (
     quote_id uuid NOT NULL UNIQUE REFERENCES public.quotes(id) ON DELETE CASCADE,
     rating smallint NOT NULL CHECK (rating >= 1 AND rating <= 5),
     comment text,
+    is_hidden boolean NOT NULL DEFAULT false,
     created_at timestamptz NOT NULL DEFAULT now()
 );
 
@@ -190,13 +224,14 @@ COMMENT ON COLUMN public.reviews.user_id IS 'The ID of the user who wrote the re
 COMMENT ON COLUMN public.reviews.quote_id IS 'The transaction (quote) this review is for. Ensures one review per transaction.';
 COMMENT ON COLUMN public.reviews.rating IS 'Star rating from 1 to 5.';
 COMMENT ON COLUMN public.reviews.comment IS 'The text content of the review.';
+COMMENT ON COLUMN public.reviews.is_hidden IS 'Flag to hide the review from public view by an admin.';
 COMMENT ON COLUMN public.reviews.created_at IS 'Timestamp of when the review was submitted.';
 
 -- Enable Row Level Security
 ALTER TABLE public.reviews ENABLE ROW LEVEL SECURITY;
 ```
 
-### 8. `review_votes` Table
+### 9. `review_votes` Table
 
 리뷰에 대한 '좋아요/싫어요' 반응을 기록합니다.
 
@@ -214,7 +249,7 @@ COMMENT ON TABLE public.review_votes IS 'Stores likes and dislikes for reviews.'
 ALTER TABLE public.review_votes ENABLE ROW LEVEL SECURITY;
 ```
 
-### 9. `favorites` Table
+### 10. `favorites` Table
 
 사용자가 찜한 판매점 정보를 관리합니다.
 
@@ -232,7 +267,7 @@ COMMENT ON TABLE public.favorites IS 'Stores user''s bookmarked items like store
 ALTER TABLE public.favorites ENABLE ROW LEVEL SECURITY;
 ```
 
-### 10. `chat_rooms`  Tables
+### 11. `chat_rooms`  Tables
 
 소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
 
@@ -259,7 +294,7 @@ COMMENT ON COLUMN public.chat_rooms.created_at IS 'Timestamp of when the chat ro
 ALTER TABLE public.chat_rooms ENABLE ROW LEVEL SECURITY;
 ```
 
-### 11. `chat_messages` Tables
+### 12. `chat_messages` Tables
 
 소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
 
@@ -289,7 +324,7 @@ COMMENT ON COLUMN public.chat_messages.created_at IS 'Timestamp of when the mess
 ALTER TABLE public.chat_messages ENABLE ROW LEVEL SECURITY;
 ```
 
-### 12. `notices` Table
+### 13. `notices` Table
 
 플랫폼 전체 공지사항을 관리합니다.
 
@@ -307,7 +342,7 @@ COMMENT ON TABLE public.notices IS 'Stores platform-wide announcements for users
 ALTER TABLE public.notices ENABLE ROW LEVEL SECURITY;
 ```
 
-### 13. `policies`  Tables
+### 14. `policies`  Tables
 
 버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
 
@@ -326,7 +361,7 @@ COMMENT ON TABLE public.policies IS 'Stores versioned legal documents like ToS a
 ALTER TABLE public.policies ENABLE ROW LEVEL SECURITY;
 ```
 
-### 14. `policy_consents` Tables
+### 15. `policy_consents` Tables
 
 버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
 
@@ -343,7 +378,7 @@ COMMENT ON TABLE public.policy_consents IS 'Tracks user consent to specific poli
 ALTER TABLE public.policy_consents ENABLE ROW LEVEL SECURITY;
 ```
 
-### 15. `support_tickets`  Tables
+### 16. `support_tickets`  Tables
 
 고객 지원 문의 및 답변을 관리합니다.
 
@@ -361,7 +396,7 @@ COMMENT ON TABLE public.support_tickets IS 'Stores customer support inquiries.';
 ALTER TABLE public.support_tickets ENABLE ROW LEVEL SECURITY;
 ```
 
-### 16. `ticket_replies` Tables
+### 17. `ticket_replies` Tables
 
 고객 지원 문의 및 답변을 관리합니다.
 
@@ -377,4 +412,3 @@ CREATE TABLE public.ticket_replies (
 COMMENT ON TABLE public.ticket_replies IS 'Stores replies for support tickets.';
 ALTER TABLE public.ticket_replies ENABLE ROW LEVEL SECURITY;
 ```
-
