--- a/somang_documents/somang_documents/설계/테이블명세.md
+++ b/somang_documents/somang_documents/설계/테이블명세.md
@@ -32,29 +32,49 @@
 | `id`                   | 판매점 ID    | `uuid`         | PK, DEFAULT `gen_random_uuid()` | 판매점의 고유 식별자.                                                  |
 | `owner_id`             | 소유주 ID    | `uuid`         | NOT NULL, FK (profiles.id)      | 판매점주의 프로필 ID. `profiles` 테이블을 참조하며, 소유주 프로필 삭제 시 연쇄적으로 삭제됩니다. |
 | `name`                 | 판매점명      | `text`         | NOT NULL                        | 판매점의 공식 상호명.                                                  |
-| `address`              | 주소        | `text`         |                                 | 판매점의 물리적 주소. 지도 서비스 연동에 사용됩니다.                                |
+| `zip_code`             | 우편번호      | `text`         |                                 | 판매점 주소의 우편번호.                                               |
+| `base_address`         | 기본주소      | `text`         |                                 | 판매점 주소의 기본 부분 (예: 도로명 주소).                                |
+| `detail_address`       | 상세주소      | `text`         |                                 | 판매점 주소의 상세 부분 (예: 층, 호수).                                   |
+| `latitude`             | 위도        | `numeric(10,8)`|                                 | 주소의 위도 좌표. 지도 서비스에 사용됩니다.                                   |
+| `longitude`            | 경도        | `numeric(11,8)`|                                 | 주소의 경도 좌표. 지도 서비스에 사용됩니다.                                   |
 | `description`          | 소개        | `text`         |                                 | 판매점에 대한 간략한 소개글.                                              |
 | `profile_image_url`    | 프로필이미지URL | `text`         |                                 | 판매점 대표 이미지의 URL. Supabase Storage에 저장된 파일 경로.                 |
+| `status`               | 상태        | `text`         | NOT NULL, DEFAULT `'pending'`   | 판매점의 현재 상태 ('pending', 'approved', 'rejected', 'suspended' 중 하나). |
 | `is_certified`         | 인증여부      | `boolean`      | NOT NULL, DEFAULT `false`       | 'T-Bridge 인증 성지' 여부를 나타내는 플래그.                                |
 | `response_rate`        | 응답률       | `numeric(5,2)` | DEFAULT `0.00`                  | (캐시) 견적 응답률. 성능 최적화를 위해 주기적으로 계산하여 저장합니다.                     |
 | `chat_room_count`      | 상담건수      | `integer`      | DEFAULT `0`                     | (캐시) 총 상담 건수.                                                 |
 | `accepted_quote_count` | 개통건수      | `integer`      | DEFAULT `0`                     | (캐시) 총 개통(채택) 건수.                                             |
 | `created_at`           | 등록일시      | `timestamptz`  | NOT NULL, DEFAULT `now()`       | 판매점 정보가 시스템에 등록된 시각.                                          |
 
-### 4. promotions
+### 4. store_verification_documents
+- **테이블 설명**: 판매점이 제출하는 인증 서류 정보를 관리합니다.
+
+| 컬럼 영문명           | 컬럼 한글명  | 데이터 타입        | 제약 조건                     | 설명                                         |
+| :---------------- | :------ | :------------ | :-------------------------- | :----------------------------------------- |
+| `id`              | 서류 ID   | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 서류의 고유 식별자.                                |
+| `store_id`        | 판매점 ID  | `uuid`        | NOT NULL, FK (stores.id)    | 서류를 제출한 판매점의 ID.                             |
+| `document_type`   | 서류 종류  | `text`        | NOT NULL                    | 서류의 종류 ('business_license', 'telecom_license'). |
+| `file_url`        | 파일 URL  | `text`        | NOT NULL                    | 업로드된 서류 파일의 URL (Supabase Storage 경로).        |
+| `status`          | 심사 상태  | `text`        | NOT NULL, DEFAULT 'submitted' | 서류 심사 상태 ('submitted', 'approved', 'rejected'). |
+| `created_at`      | 제출일시   | `timestamptz` | NOT NULL, DEFAULT `now()`   | 서류가 제출된 시각.                                |
+| `reviewed_at`     | 심사일시   | `timestamptz` |                             | 관리자가 서류를 심사한 시각.                         |
+| `reviewer_id`     | 심사자 ID  | `uuid`        | FK (profiles.id)            | 서류를 심사한 관리자의 ID.                           |
+| `reject_reason`   | 거절 사유  | `text`        |                             | 심사가 거절된 경우 그 사유.                          |
+
+### 5. promotions
 - **테이블 설명**: 판매점이 등록하는 마케팅 프로모션 정보를 관리합니다.
 
 | 컬럼 영문명        | 컬럼 한글명  | 데이터 타입        | 제약 조건                           | 설명                 |
 | :------------ | :------ | :------------ | :------------------------------ | :----------------- |
 | `id`          | 프로모션 ID | `uuid`        | PK, DEFAULT `gen_random_uuid()` | 프로모션의 고유 식별자.      |
-| `store_id`    | 판매점 ID  | `uuid`        | NOT NULL, FK (stores.id)        | 프로모션을 게시한 판매점의 ID. |
+| `store_id`    | 판매점 ID  | `uuid`        | NOT NULL, FK (stores.id)        | 프로모션을 게시한 판매점의 ID. | 
 | `title`       | 제목      | `text`        | NOT NULL                        | 프로모션의 제목.          |
 | `description` | 상세내용    | `text`        |                                 | 프로모션의 상세 설명.       |
 | `start_date`  | 시작일시    | `timestamptz` | NOT NULL                        | 프로모션 시작 시각.        |
 | `end_date`    | 종료일시    | `timestamptz` | NOT NULL                        | 프로모션 종료 시각.        |
 | `created_at`  | 생성일시    | `timestamptz` | NOT NULL, DEFAULT `now()`       | 프로모션이 생성된 시각.      |
 
-### 5. quote_requests
+### 6. quote_requests
 - **테이블 설명**: 소비자가 원하는 통신 상품의 조건을 담아 제출하는 견적 요청서 정보를 관리합니다.
 
 | 컬럼 영문명            | 컬럼 한글명 | 데이터 타입        | 제약 조건                             | 설명                                               |
@@ -66,7 +86,7 @@
 | `status`          | 상태     | `text`        | NOT NULL, DEFAULT `'open'`, CHECK | 요청의 현재 상태 ('open', 'closed', 'expired' 중 하나).    |
 | `created_at`      | 요청일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 견적 요청이 생성된 시각.                                   |
 
-### 6. quotes
+### 7. quotes
 - **테이블 설명**: 판매점이 소비자의 요청에 대해 제출하는 표준화된 견적서 정보를 관리합니다.
 
 | 컬럼 영문명          | 컬럼 한글명 | 데이터 타입        | 제약 조건                             | 설명                                                          |
@@ -78,7 +98,7 @@
 | `status`        | 상태     | `text`        | NOT NULL, DEFAULT `'sent'`, CHECK | 견적서의 현재 상태 ('sent', 'viewed', 'accepted', 'rejected' 중 하나). |
 | `created_at`    | 제출일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 견적서가 제출된 시각.                                                |
 
-### 7. reviews
+### 8. reviews
 - **테이블 설명**: 실제 거래를 완료한 소비자가 판매점에 대해 작성한 후기와 별점을 관리합니다.
 - 기타 설명: 하나의 거래(견적)에 대해 오직 하나의 리뷰만 작성 가능
 
@@ -90,9 +110,10 @@
 | `quote_id`   | 견적 ID  | `uuid`        | NOT NULL, UNIQUE, FK (quotes.id) | 리뷰의 근거가 된 거래(견적) ID. 거래 건당 하나의 리뷰만 허용하기 위해 UNIQUE 제약. |
 | `rating`     | 별점     | `smallint`    | NOT NULL, CHECK                  | 1부터 5까지의 정수형 별점.                                      |
 | `comment`    | 리뷰내용   | `text`        |                                  | 소비자가 작성한 텍스트 형식의 리뷰.                                  |
+| `is_hidden`  | 숨김여부   | `boolean`     | NOT NULL, DEFAULT `false`        | 관리자에 의해 부적절한 리뷰가 숨김 처리되었는지 여부.                     |
 | `created_at` | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`        | 리뷰가 작성된 시각.                                           |
 
-### 8. review_votes
+### 9. review_votes
 - **테이블 설명**: 리뷰에 대한 사용자의 '좋아요/싫어요' 반응을 기록합니다.
 - 기타 설명: 한 사용자는 하나의 리뷰에 대해 한 번만 투표할 수 있음
 
@@ -104,7 +125,7 @@
 | `vote_type`  | 투표 유형  | `text`        | NOT NULL, CHECK                 | 투표 유형 ('like' 또는 'dislike'). |
 | `created_at` | 투표일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 투표가 이루어진 시각.                 |
 
-### 9. favorites
+### 10. favorites
 - **테이블 설명**: 사용자가 관심있어 하는 판매점 등 특정 항목을 저장합니다.
 
 | 컬럼 영문명        | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                                    |
@@ -115,7 +136,7 @@
 | `target_type` | 대상 유형  | `text`        | NOT NULL, CHECK                 | 찜한 대상의 종류 ('STORE', 'PHONE_MODEL' 등). |
 | `created_at`  | 찜한일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 찜한 시각.                                |
 
-### 10. chat_rooms
+### 11. chat_rooms
 - **테이블 설명**: 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다.
 - 기타 설명: 동일한 사용자, 판매점, 견적 조합으로 중복된 채팅방이 생성되지 않음.
 
@@ -127,7 +148,7 @@
 | `quote_id`   | 견적 ID  | `uuid`        | FK (quotes.id)                  | 채팅방 개설의 계기가 된 견적의 ID (선택 사항). |
 | `created_at` | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 채팅방이 생성된 시각.                  |
 
-### 11. chat_messages
+### 12. chat_messages
 - **테이블 설명**: 각 채팅방에서 전송된 모든 메시지를 시간 순서대로 기록합니다.
 
 | 컬럼 영문명           | 컬럼 한글명  | 데이터 타입        | 제약 조건                             | 설명                        |
@@ -140,7 +161,7 @@
 | `attachment_url` | 첨부파일URL | `text`        |                                   | 이미지 등 첨부 파일의 URL.         |
 | `created_at`     | 전송일시    | `timestamptz` | NOT NULL, DEFAULT `now()`         | 메시지가 전송된 시각.              |
 
-### 12. notices
+### 13. notices
 - **테이블 설명**: 플랫폼 운영자가 게시하는 공지사항을 관리합니다.
 
 | 컬럼 영문명         | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                 |
@@ -152,7 +173,7 @@
 | `is_published` | 게시여부   | `boolean`     | NOT NULL, DEFAULT `false`       | 사용자에게 게시되었는지 여부.   |
 | `created_at`   | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 공지사항이 작성된 시각.      |
 
-### 13. policies
+### 14. policies
 - **테이블 설명**: 버전이 관리되는 서비스 이용약관, 개인정보처리방침 등 법적 문서를 저장합니다.
 
 | 컬럼 영문명        | 컬럼 한글명   | 데이터 타입        | 제약 조건                           | 설명                                                          |
@@ -164,7 +185,7 @@
 | `effective_date`| 효력 발생일 | `date`        | NOT NULL                        | 약관의 효력이 시작되는 날짜.                                            |
 | `created_at`   | 생성일시    | `timestamptz` | DEFAULT `now()`                 | 약관이 시스템에 등록된 시각.                                           |
 
-### 14. policy_consents
+### 15. policy_consents
 - **테이블 설명**: 사용자가 어떤 버전의 약관에 언제 동의했는지 이력을 관리합니다.
 - 기타 설명: 한 사용자가 특정 버전의 약관에 대해 중복으로 동의하는 것을 방지.
 
@@ -175,7 +196,7 @@
 | `policy_id`    | 약관 ID  | `integer`     | NOT NULL, FK (policies.id)      | 동의한 약관의 ID.      |
 | `consent_date` | 동의일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 사용자가 약관에 동의한 시각. |
 
-### 15. support_tickets
+### 16. support_tickets
 - **테이블 설명**: 사용자의 1:1 고객 지원 문의를 관리합니다.
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                             | 설명                                          |
@@ -187,7 +208,7 @@
 | `status`     | 상태     | `text`        | NOT NULL, DEFAULT `'open'`, CHECK | 문의 처리 상태 ('open', 'in_progress', 'closed'). |
 | `created_at` | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 문의가 생성된 시각.                                 |
 
-### 16. ticket_replies
+### 17. ticket_replies
 - **테이블 설명**: 고객 지원 문의에 대한 답변을 관리합니다.
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                                 |
